# Cleaning_Service_Management

./: .gitignore  README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml
clean_management/: __init__.py  api.py  auth.py  hooks.py  modules.txt  utils.py
clean_management/cleanser_calicut/: hooks.py
clean_management/cleanser_calicut/doctype/assign_booking/: assign_booking.js  assign_booking.json  assign_booking.py  test_assign_booking.py
clean_management/cleanser_calicut/doctype/booking/: booking.js  booking.json  booking.py  test_booking.py
clean_management/cleanser_calicut/doctype/child_assign_booking/: child_assign_booking.json  child_assign_booking.py
clean_management/cleanser_calicut/doctype/cleaning_task/: cleaning_task.js  cleaning_task.json  cleaning_task.py  test_cleaning_task.py
clean_management/cleanser_calicut/doctype/complaints/: complaints.js  complaints.json  (+2 more)
clean_management/public/js/: custom_signup.js
clean_management/templates/: register.html
clean_management/www/: index.html
clean_management/www/booking/: booking.html  payment.html  sucess.html
clean_management/www/feedback/: feedback.html
clean_management/www/home/: door.jpg:Zone.Identifier  girl.jpg:Zone.Identifier  login.py  man.jpg:Zone.Identifier  newhome.html  table.jpg:Zone.Identifier  three people.jpg:Zone.Identifier  two people.jpg:Zone.Identifier  whatsapp.html  woman.jpg:Zone.Identifier
clean_management/www/login/: login.html
clean_management/www/profile_update/: index.html  index.py
clean_management/www/user/: dash.html  office.jpg:Zone.Identifier
(+45 files in other folders)
