[project]
name = "clean_management"
version = "1.0.0"
description = "A professional cleaning service management system built on Frappe."
authors = [
    { name="Arsha Paul", email="arsha_paul7@gmail.com" }
]
license = { text="MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["clean_management"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
